# anetd

./: .gitignore  Cargo.toml  config.example.toml
.github/workflows/: build-module.yml
docs/: README.md  README.zh.md
module/: action.sh  module.prop  post-fs-data.sh  toggle.sh
module/webroot/: index.html
module/webroot/assets/: index-B0_Os4Av.css  index-BA4WdlkM.css  index-CqSXK7W6.js  index-D_yKokvt.js  index-DlPqY4Uh.js  index-DokycZQj.css  index-GnpXWSp1.js
scripts/: probe.py
src/: cli.rs  config.rs  daemon.rs  dns.rs  dns_server.rs  logging.rs  main.rs  network.rs  protocol.rs  proxy.rs  rules.rs  server.rs  session.rs  signal.rs  webui.rs
src/dns/: cache.rs  mod.rs  nxdomain.rs  status.rs  wire.rs
src/dns/proto/: getaddrinfo.rs  gethostby.rs  mod.rs  resnsend.rs
src/dns/response/: addrinfo.rs  hostent.rs  mod.rs  raw.rs
src/handlers/: getaddrinfo.rs  gethostbyaddr.rs  gethostbyname.rs  mod.rs  resnsend.rs  setoperatoraddress.rs
src/rules/: adblock.rs  loader.rs  mod.rs  watcher.rs
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.svelte  main.ts  style.css
webui/src/api/: anetd.ts  anetd_wasm.ts  ksu.ts
webui/src/lib/: ThemeToggle.svelte
webui/src/pages/: Dashboard.svelte  Logs.svelte  Rules.svelte  Settings.svelte
webui/src/ui/: dashboard.ts  logs.ts  rules.ts  settings.ts
webui/src/wasm/: Makefile  anetd_api.c
