[package]
name = "anetd"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
log = "0.4.32"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
xattr = "1.6.1"
