[package]
name = "anetd"
version = "0.1.0"
edition = "2024"

[dependencies]
adblock = { version = "0.12.5", default-features = false, features = ["embedded-domain-resolver"] }
arc-swap = "1.9.1"
base64 = "0.22.1"
daemonize = "0.5.0"
inotify = "0.11.2"
libc = "0.2.186"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
xattr = "1.6.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
